tests/fixtures/LatestTests/VariableDeclarationTests/errors/int_to_deci32.fg
/; EXPECT_ERROR: InitializerExpressionTypeMismatch
var x:deci32 = 5

